unpackaged/main/default/objects/Presales_Knowledge__c/Presales_Knowledge__c.object-meta.xml
<CustomObject>
    <description>Presales Knowledge Base with Questions and Answer</description>
    <label>Presales Knowledge</label>
    <nameField>
        <displayFormat>PK-{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Knowledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>