unpackaged/main/default/objects/Presales_Knowledge__c/fields/Additional_Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Additional_Search_Term__c</fullName>
    <label>Additional Search Term</label>
    <type>TextArea</type>
</CustomField>