unpackaged/main/default/objects/Presales_Knowledge__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>