unpackaged/main/default/objects/Presales_Knowledge__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <label>Business Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BS&amp;P Budgeting</fullName>
            </value>
            <value>
                <fullName>BS&amp;P Capital Planning</fullName>
            </value>
            <value>
                <fullName>BS&amp;P Performance Planning</fullName>
            </value>
            <value>
                <fullName>BS&amp;P Risk &amp; Sustainability</fullName>
            </value>
            <value>
                <fullName>FM Financial Asset Management</fullName>
            </value>
            <value>
                <fullName>FM APRA Reporting</fullName>
            </value>
            <value>
                <fullName>FM Manage Master Data</fullName>
            </value>
            <value>
                <fullName>FM Journal Processing</fullName>
            </value>
            <value>
                <fullName>FM Financial Period Control</fullName>
            </value>
            <value>
                <fullName>FM Account Reconciliation</fullName>
            </value>
            <value>
                <fullName>FM Taxation Management</fullName>
            </value>
            <value>
                <fullName>FM Treasury Management</fullName>
            </value>
            <value>
                <fullName>P&amp;EM Manage Master Data</fullName>
            </value>
            <value>
                <fullName>P&amp;EM Procure to Pay</fullName>
            </value>
            <value>
                <fullName>P&amp;EM Purchase Card Management</fullName>
            </value>
            <value>
                <fullName>P&amp;EM Travel &amp; Expense Management</fullName>
            </value>
            <value>
                <fullName>P&amp;EM Store Management</fullName>
            </value>
            <value>
                <fullName>P&amp;EM Purchase Contract Management</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Manage Master Data</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Ad hoc Invoice Management</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Receipting &amp; Banking</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Debt Management</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Billing Management</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Retail Billing</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Rent Billing</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Lease Contract Billing</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Client Billing</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Residential Financial Management</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Vessel Billing</fullName>
            </value>
            <value>
                <fullName>S&amp;RM Passenger Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>