unpackaged/main/default/objects/Presales_Knowledge__c/fields/CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>CountryRegion__c</fullName>
    <label>Country/Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Cook Islands</fullName>
            </value>
            <value>
                <fullName>Fiji</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Kiribati</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Marshall Islands</fullName>
            </value>
            <value>
                <fullName>Mongolia</fullName>
            </value>
            <value>
                <fullName>Nauru</fullName>
            </value>
            <value>
                <fullName>Niue</fullName>
            </value>
            <value>
                <fullName>Norfolk Island</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Samoa</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
            </value>
            <value>
                <fullName>Solomon Islands</fullName>
            </value>
            <value>
                <fullName>Timor-Leste</fullName>
            </value>
            <value>
                <fullName>Tonga</fullName>
            </value>
            <value>
                <fullName>Tuvalu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>