unpackaged/main/default/objects/Presales_Knowledge__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <inlineHelpText>On-premise; SaaS</inlineHelpText>
    <label>Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-premise</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>