unpackaged/main/default/objects/Presales_Knowledge__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health and Community Services</fullName>
            </value>
            <value>
                <fullName>Asset Intensive</fullName>
            </value>
            <value>
                <fullName>Project Intensive</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>