unpackaged/main/default/objects/Presales_Knowledge__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product or Module Name from Product2 table</description>
    <inlineHelpText>Search a Product or Module Name</inlineHelpText>
    <label>Module</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Presales Knowledge</relationshipLabel>
    <relationshipName>Presales_Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>