unpackaged/main/default/objects/Presales_Knowledge__c/fields/Non_Functional_Category__c.field-meta.xml
<CustomField>
    <fullName>Non_Functional_Category__c</fullName>
    <label>Non-Functional Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Archiving</fullName>
            </value>
            <value>
                <fullName>Auditing</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>BPM Forms</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Configuration/Customisation</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Redundancy</fullName>
            </value>
            <value>
                <fullName>Release Management</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Scalability</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Standards Compliance</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>User Interface</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>