unpackaged/main/default/objects/Presales_Knowledge__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ci</fullName>
            </value>
            <value>
                <fullName>CiAnywhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>