unpackaged/main/default/objects/Presales_Knowledge__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>TEXT(Module__r.GL_Product_Name__c)</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>