unpackaged/main/default/objects/Presales_Knowledge__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>