unpackaged/main/default/objects/Presales_Knowledge__c/fields/Question_Source__c.field-meta.xml
<CustomField>
    <fullName>Question_Source__c</fullName>
    <label>Question Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Votar</fullName>
            </value>
            <value>
                <fullName>iPlatinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>