unpackaged/main/default/objects/Presales_Knowledge__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2016A</fullName>
            </value>
            <value>
                <fullName>2016B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>