unpackaged/main/default/objects/Presales_Knowledge__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Non-Functional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>