unpackaged/main/default/objects/Presales_Knowledge__c/fields/Search_All__c.field-meta.xml
<CustomField>
    <fullName>Search_All__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Every record has &quot;All&quot; in this field for filtering functions</description>
    <inlineHelpText>Every record has &quot;All&quot; in this field for filtering functions</inlineHelpText>
    <label>Search All</label>
    <length>3</length>
    <type>Text</type>
</CustomField>