unpackaged/main/default/objects/Presales_Knowledge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Module__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Business_Process__c</columns>
    <columns>Delivery__c</columns>
    <columns>Platform__c</columns>
    <columns>Non_Functional_Category__c</columns>
    <columns>Requirement__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>